Updated client WIP